--- a/index.html
+++ b/index.html
@@ -157,17 +157,17 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
+											<span>1301 S University Parks Dr<br />
+											Waco, TX 76706<br />
 											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">baylorbridge@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>(432)238-1792</span>
 										</li>
 										<li>
 											<h3>Social</h3>
