--- a/index.html
+++ b/index.html
@@ -133,24 +133,54 @@
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="form-to-email.php">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
+									<form name="contactform" method="post" action="send_form_email.php">
+									<table width="450px">
+									<tr>
+									 <td valign="top">
+									  <label for="first_name">First Name *</label>
+									 </td>
+									 <td valign="top">
+									  <input  type="text" name="first_name" maxlength="50" size="30">
+									 </td>
+									</tr>
+									<tr>
+									 <td valign="top">
+									  <label for="last_name">Last Name *</label>
+									 </td>
+									 <td valign="top">
+									  <input  type="text" name="last_name" maxlength="50" size="30">
+									 </td>
+									</tr>
+									<tr>
+									 <td valign="top">
+									  <label for="email">Email Address *</label>
+									 </td>
+									 <td valign="top">
+									  <input  type="text" name="email" maxlength="80" size="30">
+									 </td>
+									</tr>
+									<tr>
+									 <td valign="top">
+									  <label for="telephone">Telephone Number</label>
+									 </td>
+									 <td valign="top">
+									  <input  type="text" name="telephone" maxlength="30" size="30">
+									 </td>
+									</tr>
+									<tr>
+									 <td valign="top">
+									  <label for="comments">Comments *</label>
+									 </td>
+									 <td valign="top">
+									  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+									 </td>
+									</tr>
+									<tr>
+									 <td colspan="2" style="text-align:center">
+									  <input type="submit" value="Submit">   <a href="http://www.freecontactform.com/email_form.php">Email Form</a>
+									 </td>
+									</tr>
+									</table>
 									</form>
 								</section>
 								<section>
