--- a/index.html
+++ b/index.html
@@ -127,9 +127,13 @@
 					</section>
 
 				<!-- Three -->
+				
+
+				
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
+							<!--  
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
@@ -184,6 +188,7 @@
 									</form>
 								</section>
 								<section>
+					-->
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
@@ -221,7 +226,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li style="color:white">&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li style="color:white">&copy; Untitled. All rights reserved.</li><li style="color:white">Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
