--- a/generic.html
+++ b/generic.html
@@ -42,11 +42,18 @@
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<ul class="icons">
+												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 					</ul>
+					<ul class="menu">
+						<li style="color:white"><a href="mailto:baylorbridge@gmail.com" target="_blank">baylorbridge@gmail.com</a><li style="color:white">&copy; Untitled. All rights reserved.</li><li style="color:white">Design: <a href="http://html5up.net">HTML5 UP</a></li></ul>
+					
 				</div>
 			</footer>
 
