Adding images and descriptions

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/bridge.jpg" alt="Cards" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Who We Are</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Bridge is a card game that has been played for over 100 years. It has often been called "the chess of card games." Studies have shown that <a href="http://www.btfy.org/documents/BridgeEducation_091712.pdf" target="_blank">bridge can improve your academics></a></p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -58,11 +58,11 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/goodPicOfMe.png" alt="President Hammon" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>President Hammon</h2>
+									<p>President Hammon is the coolest bridge instructor/player around!</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
