--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/bridge.jpg" alt="Cards" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/picOfCards.jpg" alt="Cards" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Who We Are</h2>
