--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1>Welcome!</h1>
 							<p>We are the baylor bridge club! We desire to spread the love of bridge all over campus, and the greater Waco area.</p>
-							<p>Don't know how to play? No problem! We have lessons weekly at TIME AND LOCATION TBA. Please contact us <a href="baylorbridge.github.io/elements.html">here</a>.</p>
+							<p>Don't know how to play? No problem! We have lessons weekly at TIME AND LOCATION TBA. Any and all are welcome.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
